--- a/package.json
+++ b/package.json
@@ -8,8 +8,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "graphql": "^15.3.0",
+    "graphql-request": "^3.0.0",
+    "milligram": "^1.4.1",
     "next": "9.5.2",
+    "next-auth": "^3.1.0",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-spinners": "^0.9.0",
+    "swr": "^0.3.1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.6.2",
+    "@types/react": "^16.9.49",
+    "typescript": "^4.0.2"
   }
 }
